# LoraClient

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
LoraClient/: CMakeLists.txt  main.cpp
LoraClient/qml/: Main.qml  Main_Snow.qml
LoraClient/qml/Pages/: ChatPage.qml  ChatPage_Snow.qml  ConnectionPage.qml  ConnectionPage_Snow.qml
LoraClient/src/application/: AppEngine.cpp  AppEngine.hpp
LoraClient/src/core/entities/: MsgStructures.hpp
LoraClient/src/core/usecases/: ConnectionUseCase.cpp  ConnectionUseCase.hpp  ReceiveUseCase.cpp  ReceiveUseCase.hpp  SendUseCase.cpp  SendUseCase.hpp
LoraClient/src/domain/interfaces/: IConnectionWorker.hpp
LoraClient/src/infrastructure/gateway/: LoraWrapper.hpp
LoraClient/src/infrastructure/gateway/LoRaCore/: .gitignore  CMakeLists.txt  README.md
LoraClient/src/infrastructure/gateway/LoRaCore/src/: LoRaUsbAdapter_E22_400T22U.cpp  LoRaUsbAdapter_E22_400T22U.hpp  LoRaWorker.cpp  LoRaWorker.hpp
LoraClient/src/presentation/controller/: QmlController.cpp  QmlController.hpp
doc/uml/: classes_diagram.qmodel
src/: CMakeLists.txt  main.cpp
src/gateway/: CMakeLists.txt
src/presentation/: CMakeLists.txt
src/presentation/qml/: Main_Snow.qml
src/presentation/qml/Elements/: SnowBG.qml
